# om-locations

./: AUTHORS  COPYING  COPYING.e17  ChangeLog  Makefile.am  README  TODO  autogen.sh  configure.in  diversity-nav.desktop.in  diversity_nav.edc  module.desktop  om-locations.desktop.in  splinter.desktop.in  splinter.sh
data/: Makefile.am  base_ll.eet
data/config/: Makefile.am  diversity-nav.cfg
data/themes/: Makefile.am  default.edc  default_ctrl.edc  default_entry.edc  default_ilist.edc  default_nav_alert.edc  default_nav_button.edc  default_nav_dialog.edc  default_textblock.edc  default_titlepane.edc  diversity_label.edc  diversity_nav.edc  diversity_neo_me.edc  diversity_text.edc  diversity_widget.edc  entry.edc  image.edc  label.edc  text_view.edc  tree.edc
data/themes/fonts/: Makefile.am
data/themes/images/: Makefile.am
dbus/: Makefile.am  e_dbus_proxy.c  e_dbus_proxy.h
images/: Makefile.am
maps/: Makefile.am
maps/osm/: Makefile.am
maps/sat/: Makefile.am
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  fi.po  it.po  zh_TW.po
src/: Makefile.am  e_ctrl.c  e_ctrl.h  e_flyingmenu.c  e_flyingmenu.h  e_mod_config.c  e_mod_config.h  e_mod_main.c  e_mod_main.h  e_mod_nav.c  e_mod_nav.h  e_nav.c  e_nav.h  e_nav_dbus.c  e_nav_dbus.h  e_nav_item_ap.c  e_nav_item_ap.h  e_nav_item_link.c  e_nav_item_link.h  e_nav_item_location.c  e_nav_item_location.h  e_nav_item_neo_me.c  e_nav_item_neo_me.h  e_nav_item_neo_other.c  e_nav_item_neo_other.h  e_nav_misc.c  e_nav_misc.h  e_nav_taglist.c  e_nav_taglist.h  e_nav_theme.c  e_nav_theme.h  e_nav_tileset.c  e_nav_tileset.h  e_nav_tree_model.c  e_nav_tree_model.h  e_spiralmenu.c  e_spiralmenu.h  e_spreadmenu.c  e_spreadmenu.h  e_tagmenu.c  (+5 more)
src/widgets/: Makefile.am  debug.h  e_box.c  e_box.h  e_ctrl_dialog.c  e_ctrl_dialog.h  e_editable.c  e_editable.h  e_entry.c  e_entry.h  e_icon.c  e_icon.h  e_ilist.c  e_ilist.h  e_nav_alert.c  e_nav_alert.h  e_nav_button_bar.c  e_nav_button_bar.h  e_nav_contact_editor.c  e_nav_contact_editor.h  e_nav_contact_list.c  e_nav_contact_list.h  e_nav_dialog.c  e_nav_dialog.h  e_nav_entry.c  e_nav_entry.h  e_nav_list.c  e_nav_list.h  e_nav_textedit.c  e_nav_textedit.h  e_nav_theme.c  e_nav_theme.h  e_nav_titlepane.c  e_nav_titlepane.h  e_nav_tree_model.c  e_nav_tree_model.h  e_widget.c  e_widget.h  e_widget_textblock.c  e_widget_textblock.h
tools/: Makefile.am  diversity-map-pack.c  om-locations-map-pack.c  tileiter.c  tileiter.h
