AC_PREREQ(2.59)
AC_INIT([om-locations], [0.2], [jeremy@openmoko.com])
AC_CONFIG_HEADERS(config.h)
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([1.9])

AC_PROG_CC
AM_PROG_LIBTOOL
AC_HEADER_STDC

AM_GNU_GETTEXT([external])
AM_GNU_GETTEXT_VERSION(0.14)

#
# Check EFL Libs
#
PKG_CHECK_MODULES(EFL, [ecore, ecore-file, eet, evas, edje >= 0.5.0, etk])
AC_ARG_WITH(edje-cc,
[  --with-edje-cc=PATH              specify a specific path to edje_cc],
[
  v=$withval;
  edje_cc=$v
  echo "  Enlightenment edje_cc explicitly set to "$edje_cc;
],[
  edje_cc=$(pkg-config --variable=prefix edje)/bin/edje_cc
])
AC_SUBST(edje_cc)
	
PKG_CHECK_MODULES(EDBUS, edbus)

CFLAGS="-Wall $CFLAGS"

AC_OUTPUT([
Makefile
om-locations.desktop
src/Makefile
src/widgets/Makefile
tools/Makefile
dbus/Makefile
po/Makefile.in
data/Makefile
data/themes/Makefile
data/themes/fonts/Makefile
data/themes/images/Makefile
],[])
