MAINTAINERCLEANFILES = Makefile.in
filesdir = $(pkgdatadir)/maps/osm

files_DATA = \
osm-3-0-0.png \
osm-3-0-1.png \
osm-3-0-2.png \
osm-3-0-3.png \
osm-3-0-4.png \
osm-3-0-5.png \
osm-3-0-6.png \
osm-3-0-7.png \
osm-3-1-0.png \
osm-3-1-1.png \
osm-3-1-2.png \
osm-3-1-3.png \
osm-3-1-4.png \
osm-3-1-5.png \
osm-3-1-6.png \
osm-3-1-7.png \
osm-3-2-0.png \
osm-3-2-1.png \
osm-3-2-2.png \
osm-3-2-3.png \
osm-3-2-4.png \
osm-3-2-5.png \
osm-3-2-6.png \
osm-3-2-7.png \
osm-3-3-0.png \
osm-3-3-1.png \
osm-3-3-2.png \
osm-3-3-3.png \
osm-3-3-4.png \
osm-3-3-5.png \
osm-3-3-6.png \
osm-3-3-7.png \
osm-3-4-0.png \
osm-3-4-1.png \
osm-3-4-2.png \
osm-3-4-3.png \
osm-3-4-4.png \
osm-3-4-5.png \
osm-3-4-6.png \
osm-3-4-7.png \
osm-3-5-0.png \
osm-3-5-1.png \
osm-3-5-2.png \
osm-3-5-3.png \
osm-3-5-4.png \
osm-3-5-5.png \
osm-3-5-6.png \
osm-3-5-7.png \
osm-3-6-0.png \
osm-3-6-1.png \
osm-3-6-2.png \
osm-3-6-3.png \
osm-3-6-4.png \
osm-3-6-5.png \
osm-3-6-6.png \
osm-3-6-7.png \
osm-3-7-0.png \
osm-3-7-1.png \
osm-3-7-2.png \
osm-3-7-3.png \
osm-3-7-4.png \
osm-3-7-5.png \
osm-3-7-6.png \
osm-3-7-7.png

EXTRA_DIST = $(files_DATA)

