MAINTAINERCLEANFILES = Makefile.in
filesdir = $(pkgdatadir)/maps/sat

files_DATA = \
w-1-0-0.jpg \
w-1-0-1.jpg \
w-1-0-2.jpg \
w-1-1-0.jpg \
w-1-1-1.jpg \
w-1-1-2.jpg \
w-1-2-0.jpg \
w-1-2-1.jpg \
w-1-2-2.jpg \
w-1-3-0.jpg \
w-1-3-1.jpg \
w-1-3-2.jpg \
w-1-4-0.jpg \
w-1-4-1.jpg \
w-1-4-2.jpg \
w-1-5-0.jpg \
w-1-5-1.jpg \
w-1-5-2.jpg \
w-2-0-0.jpg \
w-2-0-1.jpg \
w-2-0-2.jpg \
w-2-0-3.jpg \
w-2-0-4.jpg \
w-2-0-5.jpg \
w-2-10-0.jpg \
w-2-10-1.jpg \
w-2-10-2.jpg \
w-2-10-3.jpg \
w-2-10-4.jpg \
w-2-10-5.jpg \
w-2-1-0.jpg \
w-2-11-0.jpg \
w-2-11-1.jpg \
w-2-11-2.jpg \
w-2-11-3.jpg \
w-2-11-4.jpg \
w-2-11-5.jpg \
w-2-1-1.jpg \
w-2-1-2.jpg \
w-2-1-3.jpg \
w-2-1-4.jpg \
w-2-1-5.jpg \
w-2-2-0.jpg \
w-2-2-1.jpg \
w-2-2-2.jpg \
w-2-2-3.jpg \
w-2-2-4.jpg \
w-2-2-5.jpg \
w-2-3-0.jpg \
w-2-3-1.jpg \
w-2-3-2.jpg \
w-2-3-3.jpg \
w-2-3-4.jpg \
w-2-3-5.jpg \
w-2-4-0.jpg \
w-2-4-1.jpg \
w-2-4-2.jpg \
w-2-4-3.jpg \
w-2-4-4.jpg \
w-2-4-5.jpg \
w-2-5-0.jpg \
w-2-5-1.jpg \
w-2-5-2.jpg \
w-2-5-3.jpg \
w-2-5-4.jpg \
w-2-5-5.jpg \
w-2-6-0.jpg \
w-2-6-1.jpg \
w-2-6-2.jpg \
w-2-6-3.jpg \
w-2-6-4.jpg \
w-2-6-5.jpg \
w-2-7-0.jpg \
w-2-7-1.jpg \
w-2-7-2.jpg \
w-2-7-3.jpg \
w-2-7-4.jpg \
w-2-7-5.jpg \
w-2-8-0.jpg \
w-2-8-1.jpg \
w-2-8-2.jpg \
w-2-8-3.jpg \
w-2-8-4.jpg \
w-2-8-5.jpg \
w-2-9-0.jpg \
w-2-9-1.jpg \
w-2-9-2.jpg \
w-2-9-3.jpg \
w-2-9-4.jpg \
w-2-9-5.jpg \
w-3-0-0.jpg \
w-3-0-10.jpg \
w-3-0-11.jpg \
w-3-0-1.jpg \
w-3-0-2.jpg \
w-3-0-3.jpg \
w-3-0-4.jpg \
w-3-0-5.jpg \
w-3-0-6.jpg \
w-3-0-7.jpg \
w-3-0-8.jpg \
w-3-0-9.jpg \
w-3-10-0.jpg \
w-3-10-10.jpg \
w-3-10-11.jpg \
w-3-10-1.jpg \
w-3-10-2.jpg \
w-3-10-3.jpg \
w-3-10-4.jpg \
w-3-10-5.jpg \
w-3-10-6.jpg \
w-3-10-7.jpg \
w-3-10-8.jpg \
w-3-10-9.jpg \
w-3-1-0.jpg \
w-3-1-10.jpg \
w-3-11-0.jpg \
w-3-11-10.jpg \
w-3-11-11.jpg \
w-3-1-11.jpg \
w-3-11-1.jpg \
w-3-11-2.jpg \
w-3-11-3.jpg \
w-3-11-4.jpg \
w-3-11-5.jpg \
w-3-11-6.jpg \
w-3-11-7.jpg \
w-3-11-8.jpg \
w-3-11-9.jpg \
w-3-1-1.jpg \
w-3-12-0.jpg \
w-3-12-10.jpg \
w-3-12-11.jpg \
w-3-12-1.jpg \
w-3-12-2.jpg \
w-3-12-3.jpg \
w-3-12-4.jpg \
w-3-12-5.jpg \
w-3-12-6.jpg \
w-3-12-7.jpg \
w-3-12-8.jpg \
w-3-12-9.jpg \
w-3-1-2.jpg \
w-3-13-0.jpg \
w-3-13-10.jpg \
w-3-13-11.jpg \
w-3-13-1.jpg \
w-3-13-2.jpg \
w-3-13-3.jpg \
w-3-13-4.jpg \
w-3-13-5.jpg \
w-3-13-6.jpg \
w-3-13-7.jpg \
w-3-13-8.jpg \
w-3-13-9.jpg \
w-3-1-3.jpg \
w-3-14-0.jpg \
w-3-14-10.jpg \
w-3-14-11.jpg \
w-3-14-1.jpg \
w-3-14-2.jpg \
w-3-14-3.jpg \
w-3-14-4.jpg \
w-3-14-5.jpg \
w-3-14-6.jpg \
w-3-14-7.jpg \
w-3-14-8.jpg \
w-3-14-9.jpg \
w-3-1-4.jpg \
w-3-15-0.jpg \
w-3-15-10.jpg \
w-3-15-11.jpg \
w-3-15-1.jpg \
w-3-15-2.jpg \
w-3-15-3.jpg \
w-3-15-4.jpg \
w-3-15-5.jpg \
w-3-15-6.jpg \
w-3-15-7.jpg \
w-3-15-8.jpg \
w-3-15-9.jpg \
w-3-1-5.jpg \
w-3-16-0.jpg \
w-3-16-10.jpg \
w-3-16-11.jpg \
w-3-16-1.jpg \
w-3-16-2.jpg \
w-3-16-3.jpg \
w-3-16-4.jpg \
w-3-16-5.jpg \
w-3-16-6.jpg \
w-3-16-7.jpg \
w-3-16-8.jpg \
w-3-16-9.jpg \
w-3-1-6.jpg \
w-3-17-0.jpg \
w-3-17-10.jpg \
w-3-17-11.jpg \
w-3-17-1.jpg \
w-3-17-2.jpg \
w-3-17-3.jpg \
w-3-17-4.jpg \
w-3-17-5.jpg \
w-3-17-6.jpg \
w-3-17-7.jpg \
w-3-17-8.jpg \
w-3-17-9.jpg \
w-3-1-7.jpg \
w-3-18-0.jpg \
w-3-18-10.jpg \
w-3-18-11.jpg \
w-3-18-1.jpg \
w-3-18-2.jpg \
w-3-18-3.jpg \
w-3-18-4.jpg \
w-3-18-5.jpg \
w-3-18-6.jpg \
w-3-18-7.jpg \
w-3-18-8.jpg \
w-3-18-9.jpg \
w-3-1-8.jpg \
w-3-19-0.jpg \
w-3-19-10.jpg \
w-3-19-11.jpg \
w-3-19-1.jpg \
w-3-19-2.jpg \
w-3-19-3.jpg \
w-3-19-4.jpg \
w-3-19-5.jpg \
w-3-19-6.jpg \
w-3-19-7.jpg \
w-3-19-8.jpg \
w-3-19-9.jpg \
w-3-1-9.jpg \
w-3-20-0.jpg \
w-3-20-10.jpg \
w-3-20-11.jpg \
w-3-20-1.jpg \
w-3-20-2.jpg \
w-3-20-3.jpg \
w-3-20-4.jpg \
w-3-20-5.jpg \
w-3-20-6.jpg \
w-3-20-7.jpg \
w-3-20-8.jpg \
w-3-20-9.jpg \
w-3-2-0.jpg \
w-3-2-10.jpg \
w-3-21-0.jpg \
w-3-21-10.jpg \
w-3-21-11.jpg \
w-3-2-11.jpg \
w-3-21-1.jpg \
w-3-21-2.jpg \
w-3-21-3.jpg \
w-3-21-4.jpg \
w-3-21-5.jpg \
w-3-21-6.jpg \
w-3-21-7.jpg \
w-3-21-8.jpg \
w-3-21-9.jpg \
w-3-2-1.jpg \
w-3-22-0.jpg \
w-3-22-10.jpg \
w-3-22-11.jpg \
w-3-22-1.jpg \
w-3-22-2.jpg \
w-3-22-3.jpg \
w-3-22-4.jpg \
w-3-22-5.jpg \
w-3-22-6.jpg \
w-3-22-7.jpg \
w-3-22-8.jpg \
w-3-22-9.jpg \
w-3-2-2.jpg \
w-3-23-0.jpg \
w-3-23-10.jpg \
w-3-23-11.jpg \
w-3-23-1.jpg \
w-3-23-2.jpg \
w-3-23-3.jpg \
w-3-23-4.jpg \
w-3-23-5.jpg \
w-3-23-6.jpg \
w-3-23-7.jpg \
w-3-23-8.jpg \
w-3-23-9.jpg \
w-3-2-3.jpg \
w-3-2-4.jpg \
w-3-2-5.jpg \
w-3-2-6.jpg \
w-3-2-7.jpg \
w-3-2-8.jpg \
w-3-2-9.jpg \
w-3-3-0.jpg \
w-3-3-10.jpg \
w-3-3-11.jpg \
w-3-3-1.jpg \
w-3-3-2.jpg \
w-3-3-3.jpg \
w-3-3-4.jpg \
w-3-3-5.jpg \
w-3-3-6.jpg \
w-3-3-7.jpg \
w-3-3-8.jpg \
w-3-3-9.jpg \
w-3-4-0.jpg \
w-3-4-10.jpg \
w-3-4-11.jpg \
w-3-4-1.jpg \
w-3-4-2.jpg \
w-3-4-3.jpg \
w-3-4-4.jpg \
w-3-4-5.jpg \
w-3-4-6.jpg \
w-3-4-7.jpg \
w-3-4-8.jpg \
w-3-4-9.jpg \
w-3-5-0.jpg \
w-3-5-10.jpg \
w-3-5-11.jpg \
w-3-5-1.jpg \
w-3-5-2.jpg \
w-3-5-3.jpg \
w-3-5-4.jpg \
w-3-5-5.jpg \
w-3-5-6.jpg \
w-3-5-7.jpg \
w-3-5-8.jpg \
w-3-5-9.jpg \
w-3-6-0.jpg \
w-3-6-10.jpg \
w-3-6-11.jpg \
w-3-6-1.jpg \
w-3-6-2.jpg \
w-3-6-3.jpg \
w-3-6-4.jpg \
w-3-6-5.jpg \
w-3-6-6.jpg \
w-3-6-7.jpg \
w-3-6-8.jpg \
w-3-6-9.jpg \
w-3-7-0.jpg \
w-3-7-10.jpg \
w-3-7-11.jpg \
w-3-7-1.jpg \
w-3-7-2.jpg \
w-3-7-3.jpg \
w-3-7-4.jpg \
w-3-7-5.jpg \
w-3-7-6.jpg \
w-3-7-7.jpg \
w-3-7-8.jpg \
w-3-7-9.jpg \
w-3-8-0.jpg \
w-3-8-10.jpg \
w-3-8-11.jpg \
w-3-8-1.jpg \
w-3-8-2.jpg \
w-3-8-3.jpg \
w-3-8-4.jpg \
w-3-8-5.jpg \
w-3-8-6.jpg \
w-3-8-7.jpg \
w-3-8-8.jpg \
w-3-8-9.jpg \
w-3-9-0.jpg \
w-3-9-10.jpg \
w-3-9-11.jpg \
w-3-9-1.jpg \
w-3-9-2.jpg \
w-3-9-3.jpg \
w-3-9-4.jpg \
w-3-9-5.jpg \
w-3-9-6.jpg \
w-3-9-7.jpg \
w-3-9-8.jpg \
w-3-9-9.jpg

EXTRA_DIST = $(files_DATA)

