EXTRA_DIST =				\
	VeraBd.ttf			\
	Vera.ttf			\
	COPYING				\
	License.txt			\
	LiberationMono-BoldItalic.ttf	\
	LiberationMono-Bold.ttf		\
	LiberationMono-Italic.ttf	\
	LiberationMono-Regular.ttf	\
	LiberationSans-BoldItalic.ttf	\
	LiberationSans-Bold.ttf		\
	LiberationSans-Italic.ttf	\
	LiberationSans-Regular.ttf	\
	LiberationSerif-BoldItalic.ttf	\
	LiberationSerif-Bold.ttf	\
	LiberationSerif-Italic.ttf	\
	LiberationSerif-Regular.ttf
