touches =		\
	touch0001.png	\
	touch0002.png	\
	touch0003.png	\
	touch0004.png	\
	touch0005.png	\
	touch0006.png	\
	touch0007.png	\
	touch0008.png	\
	touch0009.png	\
	touch0010.png	\
	touch0011.png	\
	touch0012.png	\
	touch0013.png	\
	touch0014.png	\
	touch0015.png	\
	touch0016.png	\
	touch0017.png	\
	touch0018.png	\
	touch0019.png	\
	touch0020.png	\
	touch0021.png	\
	touch0022.png	\
	touch0023.png	\
	touch0024.png	\
	touch0025.png	\
	touch0026.png	\
	touch0027.png	\
	touch0028.png	\
	touch0029.png	\
	touch0030.png

EXTRA_DIST =				\
	ap_range.png			\
	ap_signal.png			\
	ap_top.png			\
	ap_tower.png			\
	city.png			\
	edit_send.png			\
	logo.png			\
	neo_other.png			\
	red_dot1.png			\
	tag_icon.png			\
	textblock_bg.png		\
	zoom.png			\
	$(touches)
